--- a/reflections/assets/ref-header.html
+++ b/reflections/assets/ref-header.html
@@ -1,160 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<header class="ref-header">
+  <div class="ref-header-inner">
 
-  <!-- =========================
-       SEO / METADATA STANDARD
-       (EDIT THESE per reflection)
-  ========================== -->
-  <!-- EDIT: Page title -->
-  <title>The Paradox of God — A Solitude Reflection by Ninox Antolihao</title>
+    <!-- LEFT AREA: Logo + Brand + Hamburger -->
+    <div class="ref-header-left">
+      <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
 
-  <!-- EDIT: Description -->
-  <meta name="description" content="A philosophical reflection exploring the tension between divine perfection, human suffering, and the moral weight of freedom.">
-
-  <!-- EDIT: Canonical URL -->
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
-
-  <!-- Open Graph Meta -->
-  <meta property="og:type" content="article">
-  <!-- EDIT: OG title -->
-  <meta property="og:title" content="The Paradox of God — Solitude Reflections">
-  <!-- EDIT: OG description (same as meta description is fine) -->
-  <meta property="og:description" content="A philosophical reflection exploring the tension between divine perfection, human suffering, and the moral weight of freedom.">
-  <!-- EDIT: Absolute URL of share image -->
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/share.jpg">
-  <!-- EDIT: OG URL -->
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <!-- EDIT: Twitter title -->
-  <meta name="twitter:title" content="The Paradox of God — Solitude Reflections">
-  <!-- EDIT: Twitter description -->
-  <meta name="twitter:description" content="A philosophical reflection exploring the tension between divine perfection, human suffering, and the moral weight of freedom.">
-  <!-- EDIT: Twitter image -->
-  <meta name="twitter:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/share.jpg">
-
-  <!-- JSON-LD Structured Data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Article",
-    "headline": "The Paradox of God — Solitude Reflections",
-    "author": {
-      "@type": "Person",
-      "name": "Ninox Antolihao"
-    },
-    "image": "https://stonegrillresto.net/reflections/pages/the-paradox-of-god/share.jpg",
-    "datePublished": "2025-01-01",
-    "publisher": {
-      "@type": "Organization",
-      "name": "Stone Grill Press",
-      "logo": {
-        "@type": "ImageObject",
-        "url": "https://stonegrillresto.net/reflections/assets/logo1.PNG"
-      }
-    },
-    "description": "A philosophical reflection exploring the tension between divine perfection, human suffering, and the moral weight of freedom.",
-    "mainEntityOfPage": "https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html"
-  }
-  </script>
-
-  <!-- =========================
-       SHARED STYLES
-  ========================== -->
-  <!-- Global reflections base styles (already existing on your site) -->
-  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
-  <!-- Unified header + hamburger + audio design -->
-  <link rel="stylesheet" href="/reflections/assets/styles/reflections-header.css?v=21">
-
-  <!-- Optional: PWA manifest for Reflections app -->
-  <link rel="manifest" href="/reflections/manifest.json">
-</head>
-
-<body>
-  <!-- HEADER PLACEHOLDER (filled by reflections-header.js) -->
-  <div id="ref-header-placeholder"></div>
-
-  <main class="page-content">
-    <!-- PAGE TITLE + SUBTITLE -->
-    <header class="page-header" style="max-width:800px;margin:0 auto 0.8rem auto;">
-      <!-- EDIT: Main title -->
-      <h1>The Paradox of God</h1>
-      <!-- EDIT: Subtitle line -->
-      <p class="page-subtitle">A Solitude Reflection by Ninox Antolihao</p>
-
-      <!-- EDIT: Scrolling subtitle text -->
-      <div class="scrolling-subtitle">
-        <span>A reflection on divine perfection, human suffering, and the moral weight of freedom.</span>
-      </div>
-    </header>
-
-    <!-- AUDIO PLAYER + PLAYLIST (standard block) -->
-    <section class="audio-wrap">
-      <div class="audio-wrapper">
-        <audio id="reflectionAudio" controls preload="metadata">
-          <source id="audioSource" src="" type="audio/mpeg">
-          Your browser does not support the audio element.
-        </audio>
-
-        <div class="playlist">
-          <!-- EDIT: Track 1 source + titles -->
-          <div class="playlist-row active"
-               data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3">
-            <div class="playlist-main">
-              <div class="playlist-title">The Paradox of God</div>
-              <div class="playlist-sub">Main narration</div>
-            </div>
-            <div class="playlist-duration">--:--</div>
-          </div>
-
-          <!-- OPTIONAL: Track 2 -->
-          <!--
-          <div class="playlist-row"
-               data-src="/reflections/pages/the-paradox-of-god/paradox-alt.mp3">
-            <div class="playlist-main">
-              <div class="playlist-title">The Paradox of God (Alt)</div>
-              <div class="playlist-sub">Alternative tone or language</div>
-            </div>
-            <div class="playlist-duration">--:--</div>
-          </div>
-          -->
-        </div>
-      </div>
-    </section>
-
-    <!-- MAIN CONTENT -->
-    <div class="content">
-      <!-- EDIT: Replace with the actual reflection text -->
-      <p>
-        We are told that God is perfect, yet creates what is flawed — a paradox that religion often avoids but the soul keeps returning to.
-      </p>
-
-      <p>
-        When we speak of a perfect being, we imagine a mind beyond error, a will beyond contradiction, and a love beyond condition.
-        Yet the world we wake up into is stitched with accidents, cruelty, and silence. The more honest we are about experience,
-        the more the words “perfect” and “loving” begin to tremble under the weight of reality.
-      </p>
-
-      <!-- Add the rest of your paragraphs here -->
+      <a href="/reflections/index.html" class="brand-link">
+        <img src="/reflections/assets/logo1.PNG" alt="Solitude Logo" class="brand-logo">
+        <span class="brand-text">
+          <span class="brand-title">Moments of Solitude</span>
+          <span class="brand-subtitle">Stone Grill Reflections</span>
+        </span>
+      </a>
     </div>
 
-    <footer>
-      <p>© 2025 Ninox Antolihao · First Edition — Stone Grill Press · Leyte, Philippines</p>
-    </footer>
-  </main>
+    <!-- RIGHT AREA: Page Badge + Tools -->
+    <div class="ref-header-right">
+      <div class="header-actions">
+        <button id="btnBack" class="header-btn">Back</button>
+        <button id="btnShare" class="header-btn">Share</button>
+        <button id="btnAudio" class="header-btn">Audio</button>
+      </div>
 
-  <!-- =========================
-       SHARED HEADER + AUDIO JS
-  ========================== -->
-  <script src="/reflections/assets/reflections-header.js?v=21" defer></script>
-  <script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/reflections/sw.js');
-  }
-</script>
-</body>
-</html>
+      <div class="current-page-badge">
+        <span id="current-page-icon" class="page-icon">△</span>
+        <span id="current-page-label" class="page-label">Reflection</span>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- SLIDING MENU PANEL -->
+  <nav class="ref-menu-panel">
+    <div class="ref-menu-card">
+      <div class="ref-menu-title">REFLECTIONS</div>
+      <ul class="ref-menu-list">
+
+        <li><a class="ref-menu-link" data-icon="△"
+               href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
+
+        <li><a class="ref-menu-link" data-icon="◇"
+               href="/reflections/pages/divine-hiddeness/read.html">The Divine Premise</a></li>
+
+        <li><a class="ref-menu-link" data-icon="✺"
+               href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
+
+        <li><a class="ref-menu-link" data-icon="♒"
+               href="/reflections/pages/echoes-of-survival/read.html">Echoes of Survival</a></li>
+
+        <li><a class="ref-menu-link" data-icon="❖"
+               href="/reflections/pages/silent-influence/read.html">Silent Influence</a></li>
+
+        <li><a class="ref-menu-link" data-icon="☄"
+               href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
+
+        <li><a class="ref-menu-link" data-icon="◎"
+               href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
+
+        <li><a class="ref-menu-link" data-icon="▵"
+               href="/reflections/pages/initial-premise/read.html">The Fullness That Needs Nothing</a></li>
+
+      </ul>
+    </div>
+  </nav>
+
+  <div class="ref-menu-overlay"></div>
+</header>
